refactor: 规范化数据目录结构
- 创建 data/ 目录存放运行数据（git 忽略）
- 创建 examples/ 目录存放模板文件
- 删除废弃的 config/ 目录
- 更新 .gitignore 和 README.md

--- a/.gitignore
+++ b/.gitignore
@@ -30,14 +30,9 @@ env/
 results/
 logs/
 *.log
-config/
-# Excel 配置文件（包含敏感信息）
-config/servers.xlsx
-config/*_test.xlsx
 
-# 保留模板文件
-!config/servers_template.xlsx
-!config/servers_empty.xlsx
+# 数据目录（包含敏感信息如密码）
+data/*
 
 # IDE
 .vscode/
